azure-gcp-failover/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-gcp-db-app
  labels:
    app: go-gcp-db
spec:
  replicas: 3
  selector:
    matchLabels:
      app: go-gcp-db
  template:
    metadata:
      labels:
        app: go-gcp-db
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchLabels:
                  app: go-gcp-db
              topologyKey: "kubernetes.io/hostname"  # spread access different nodes based on their hostnames
      # Removed initContainers to prevent "stuck" pods during testing
      containers:
      # --- Tier 2: The Go App ---
      - name: go-db-app-container
        image: anuroop21/go-db-application:v4
        imagePullPolicy: Always
        ports:
        - containerPort: 8080

      # --- Tier 3 Bridge: Cloud SQL Proxy ---
      - name: cloud-sql-proxy
        image: gcr.io/cloud-sql-connectors/cloud-sql-proxy:2.8.0
        args:
          - "aks-integration-lab:asia-south1:go-backend-db" # Hardcoded: Your Connection Name
          - "--port=5432"
          - "--credentials-file=/secrets/credentials.json"
        volumeMounts:
        - name: gcp-sa-key-volume
          mountPath: /secrets
          readOnly: true

      volumes:
      - name: gcp-sa-key-volume
        secret:
          secretName: gcp-sa-key # This is the only secret we keep (for the JSON key)
