azure-gcp-failover/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-db-service
  namespace: default
spec:
  selector:
    app: go-gcp-db
  type: ClusterIP
  ports:
  - name: http
    protocol: TCP
    port: 8080
    targetPort: 8080
