azure-gcp-failover/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gb-gcp-db-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: my-new-app.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: go-db-service # Your other service
            port:
              number: 8080
